<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>StarCatalogueMVCClass</class>
 <widget class="QMainWindow" name="StarCatalogueMVCClass">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>600</width>
    <height>400</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>StarCatalogueMVC</string>
  </property>
  <widget class="QWidget" name="centralWidget">
   <layout class="QGridLayout" name="gridLayout">
    <item row="1" column="0" colspan="4">
     <widget class="QTableView" name="tableView"/>
    </item>
    <item row="2" column="1">
     <widget class="QLineEdit" name="raLineEdit"/>
    </item>
    <item row="2" column="3">
     <widget class="QPushButton" name="addButton">
      <property name="text">
       <string>ADD</string>
      </property>
     </widget>
    </item>
    <item row="2" column="0">
     <widget class="QLineEdit" name="nameLineEdit"/>
    </item>
    <item row="0" column="3">
     <widget class="QCheckBox" name="checkBox">
      <property name="text">
       <string>ALL Or Not</string>
      </property>
     </widget>
    </item>
    <item row="2" column="2">
     <widget class="QLineEdit" name="decLineEdit"/>
    </item>
    <item row="3" column="0">
     <widget class="QPushButton" name="searchButton">
      <property name="text">
       <string>SEARCH</string>
      </property>
     </widget>
    </item>
    <item row="3" column="1" colspan="3">
     <widget class="QListWidget" name="searchList"/>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menuBar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>600</width>
     <height>21</height>
    </rect>
   </property>
  </widget>
  <widget class="QToolBar" name="mainToolBar">
   <attribute name="toolBarArea">
    <enum>TopToolBarArea</enum>
   </attribute>
   <attribute name="toolBarBreak">
    <bool>false</bool>
   </attribute>
  </widget>
  <widget class="QStatusBar" name="statusBar"/>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources>
  <include location="StarCatalogueMVC.qrc"/>
 </resources>
 <connections/>
</ui>
